Добавлен паттерн Компоновщик

--- a/src/main/java/test/design/patterns/structural/bridge/description
+++ b/src/main/java/test/design/patterns/structural/bridge/description
@@ -25,4 +25,4 @@
 Комментарий: Используется связь между интерфейсом и абстрактным классом.
 Интерфейс может расширяться независимо от абстракного класса, который хранит в свойстве ссылку на интерфейс.
 Соответственно все потомки абстрактного класса могут использовать классы реализующие интерфейс.
-Асбтрактный класс с ссылкой на интерфейс это и есть мост
+Абcтрактный класс с ссылкой на интерфейс это и есть мост
