Добавлен паттерн Фасад

--- a/src/main/java/test/design/patterns/structural/decorator/description
+++ b/src/main/java/test/design/patterns/structural/decorator/description
@@ -1,5 +1,5 @@
   
-Шаблон: Декоратор(Decorator)
+Шаблон: Декоратор(Decorator, Wrapper)
 =======================================================================================================
 Цель:
 
@@ -19,6 +19,6 @@
 - расширение класса путём порождения подклассов невозможно по каким-либо причинам.
 
 =======================================================================================================
-Комментарий: В основе лежит интерфейс с реализациями. Класс-декоратор агрегируюет ссылку на интерфейс.
+Комментарий: В основе лежит интерфейс с реализациями. Класс-декоратор агрегирует ссылку на интерфейс.
 Все наследники агрегатора реализуют и содержат ссылку на интерфейс
 Таким образом все наследники класса-агрегатора могут ссылаться друг на друга и добавлять свои методы
