--- a/src/main/java/test/design/patterns/creational/prototype/description
+++ b/src/main/java/test/design/patterns/creational/prototype/description
@@ -19,4 +19,4 @@
 =======================================================================================================
 
 Комментарий: В ходе выполнения программы, состояние объекта класса может меняться. Паттерн позволяет
-получить новую копию класса со всеми своствами на момент копирования.
+получить новую копию класса со всеми свойствами на момент копирования.
