--- a/src/main/java/test/design/patterns/structural/facade/description
+++ b/src/main/java/test/design/patterns/structural/facade/description
@@ -3,7 +3,7 @@
 =======================================================================================================
 Цель:
 
-Предоставить унифицированный интерфейс вместо нескольких интерфейсов подсиистемы.
+Предоставить унифицированный интерфейс вместо нескольких интерфейсов подсистемы.
 
 =======================================================================================================
 
