--- a/src/main/java/test/design/patterns/behavioral/chain/description
+++ b/src/main/java/test/design/patterns/behavioral/chain/description
@@ -18,3 +18,6 @@
 - дополнительная гибкость при распределении обязанностей между объектами;
 
 =======================================================================================================
+Комментарий: В абстрактном классе содержатся методы, которые позволяют связывать наследников между собой.
+В итоге получается связанная иерархия, поведение которой можно управлять, передавая на вход разные
+параметры.
