--- a/src/main/java/test/design/patterns/behavioral/mediator/description
+++ b/src/main/java/test/design/patterns/behavioral/mediator/description
@@ -21,3 +21,6 @@
   подклассов.
 
 =======================================================================================================
+Комментарий: Класс посредник управляет взаимодействием с элементами, ссылки на которые он содержит(в
+виде списка или отдельных ссылок). Все передаваемые вызовы компонентам проходят через этот класс.
+Для примера самолеты и диспетчер, который передает и принимает вызовы.
