Добавлен паттерн Стратегия

--- a/src/main/java/test/design/patterns/behavioral/command/description
+++ b/src/main/java/test/design/patterns/behavioral/command/description
@@ -14,7 +14,7 @@
 =======================================================================================================
 Пример использования:
 
-- параметризация объектов выполняемым дейтсвием;
+- параметризация объектов выполняемым действием;
 - определять запрос, ставить его в очередь или выполнять его в разное время
 
 =======================================================================================================
